--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,35 @@
-theme: jekyll-theme-midnight
+
 title: Evgeny Epifanov
-description: Android developer
+email: eevcode@gmail.com
+description: Android Developer
+baseurl: ""
+url: "https://eecode.ru"
+
+# Build settings
+# theme: minima
+plugins:
+  - jekyll-feed
+
+sass:
+  sass_dir:           _sass
+  style:              compressed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
